Add unit-tests